karl package Changelog
======================

Unreleased
----------

- Make "external" action URL detection work for HTTPS URLs (LP #661381).

3.48 (2010-10-28)
-----------------

- Improve descrption-extraction utility, avoiding a bug in older libxml2
  and making it more lazy (LP #663399).

- Made '/people' objects editable TTW by administrators.  See
  https://blueprints.launchpad.net/karl3/+spec/ttw-people-configuration

- Display last login time on main profile view, using relative time via
  the 'timeago' jQuery plugin.

- Record users' last login time on their profile.  Note that this requires
  taking over control of the login form POST from the ``repoze.who`` form
  plugin.  See https://blueprints.launchpad.net/karl3/+spec/last-login-date

- Made profile's ``country`` field required, and added new ``XX`` country
  code to account for unknown / blank items.  See
  https://blueprints.launchpad.net/karl3/+spec/country-required

- Changed label of text field in calendar events to 'Description' for all
  occurrences in the user interface.  (LP #629663)

- Added attachments to calendar event alerts. (LP #629663)

- Load TinyMCE JS / CSS only on pages which need it (LP #622813).

- Attempt to fix unclean kaltura embeds on IE8 (LP #658546).

- Fixed content feeds to work with an instance not rooted at '/'.

- When adding a new user, any previous invitations that user had are deleted.
  (LP #659926)

- Hide "Terms and Conditions" and "Accept Privacy Policy" fields in the accept
  invitation form if there is no text to display for those fields.
  (LP #651209)

3.47 (2010-10-07)
-----------------

- gave profile body a set width, so it doesn't fall out of its
  area in IE (LP #638326)

- put in correct version if corners.png, so IE will display the
  background on feed actions (LP #629013)

- removed IE calendar styles, that were actually breaking things
  (LP #629026)

- Removed Karl's implementation of Message in favor of the implementation in
  repoze.postoffice.